--- a/src/app.scss
+++ b/src/app.scss
@@ -91,64 +91,24 @@
     }
 }
 
-.router-link-active {
-    opacity: 1 !important;
-    background-color: $grey-active;
-    transition: 0.4s;
+.icon-wrapper {
+    cursor: pointer;
+    padding: 8px;
+    transition: background-color 0.3s;
+}
+
+.icon-wrapper:hover {
+    background: rgba(255, 255, 255, 0.1);
+}
+
+.icon-wrapper.active {
+    background: rgba(255, 255, 255, 0.2);
 }
 
 #listcard {
-    grid-area: 2 / 2 / 3 / 3;
-    background-color: $list-color;
-    &__header {
-        @include center;
-        border-bottom: 2px solid $list-active-color;
-    }
-}
-
-.search-group {
-    margin: 10px 0px 10px 16px;
-    width: 100%;
-    @include center;
-
-    &__text {
-        &:focus-visible {
-            border: 2px solid #ffb342;
-        }
-
-        &::placeholder {
-            color: #9e9ea7;
-        }
-        
-        height: 40px;
-        width: 100%;
-        background-color: white;
-        @include font-light(20px);
-        @include center;
-
-        background-image: url("data:image/svg+xml;charset=utf-8,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 1024 1024' width='20' height='20'%3E%3Cpath d='M694.857 475.429q0-105.715-75.143-180.858T438.857 219.43 258 294.57 182.857 475.43 258 656.286t180.857 75.143 180.857-75.143 75.143-180.857zM987.43 950.857q0 29.714-21.715 51.429T914.286 1024q-30.857 0-51.429-21.714l-196-195.429q-102.286 70.857-228 70.857-81.714 0-156.286-31.714T154 760.286 68.286 631.714 36.57 475.43t31.715-156.286T154 190.57t128.571-85.714 156.286-31.714 156.286 31.714 128.571 85.714 85.715 128.572 31.714 156.286q0 125.714-70.857 228l196 196q21.143 21.142 21.143 51.428z' fill='%239AA0A6'/%3E%3C/svg%3E");
-        background-position: 10px, 50%;
-        background-repeat: no-repeat;
-        border: 2px solid #dce5ec;
-        border-radius: 20px;
-        outline: none;
-        padding: 0 8px 0 38px;
-    }
-}
-
-.student-list__button {
-    @include center;
-    border: 0;
-    background: white;
-    border-radius: 5px;
-    box-shadow: rgba(45, 35, 66, 0.2) 0 2px 4px;
-    margin: 15px 20px;
-    width: 20%;
-    height: 40px;
-    @include font-regular(15px);
-    cursor: pointer;
-    transform: skew(-15deg);
-    overflow: hidden;
+    height: 100%;
+    background: #fff;
+    box-shadow: 0 2px 12px rgba(0, 0, 0, 0.1);
 }
 
 #listbody {
@@ -165,102 +125,115 @@
 }
 
 .list-item {
-    display: grid;
-    border: 1px $list-active-color solid;
-    grid: {
-        template-columns: 75px 15px 1fr 15px 75px;
-        template-rows: 35px 35px 1fr;
-        column-gap: 0px;
-        row-gap: 0px;
-    }
-    width: 100%;
-    padding: 15px 25px;
-    &:hover {
-        @extend .active;
-    }
-
-    &__avatar {
-        grid-area: 1 / 1 / 3 / 2;
-        cursor: pointer;
-        .add {
-            @include circle(25px);
-            position: relative;
-            left: 55px;
-            bottom: 80px;
-            background-color: $grey;
-            border: 2px solid transparent;
-            &::before {
-                width: 80%;
-                height: 4px;
-            }
-            &::after {
-                width: 4px;
-                height: 80%;
-                transition: transform 200ms ease 0s;
-            }
-            &::before,
-            &::after {
-                display: block;
-                content: '';
-                position: absolute;
-                inset: 0px;
-                margin: auto;
-                background-color: white;
-            }
-        }
-        .minus {
-            @extend .add;
-            &::after {
-                width: 4px;
-                height: 80%;
-                transition: transform 200ms ease 0s;
-                transform: rotateZ(90deg);
-            }
-        }
-    }
-    &__name {
-        grid-area: 1 / 3 / 2 / 4;
-        @include font-heavy(25px);
-        color: $font-black;
-        overflow: hidden;
-        text-overflow: ellipsis;
-        white-space: nowrap;
-        user-select: none;
-    }
-    &__bio {
-        grid-area: 2 / 3 / 3 / 4;
-        @include font-heavy(20px);
-        color: $font-grey;
-        overflow: hidden;
-        text-overflow: ellipsis;
-        white-space: nowrap;
-        user-select: none;
-    }
-    &__mark {
-        grid-area: 1 / 5 / 3 / 6;
-        img {
-            -webkit-filter: brightness(15%);
-            filter: brightness(15%);
-            scale: 0.8;
-        }
-    }
-    &__avatars {
-        grid-area: 3 / 1 / 4 / 6;
-        display: flex;
-        flex-wrap: wrap;
-        padding-top: 16px;
-        img {
-            margin-right: 16px;
-        }
-    }
-}
-
-img {
-    @include circle(75px);
+    display: flex;
+    align-items: center;
+    padding: 12px 16px;
+    border-bottom: 1px solid #eee;
     cursor: pointer;
-}
+  
+    &:hover {
+      background-color: #f5f7fa;
+    }
+  
+    &__info {
+      margin-left: 12px;
+      flex: 1;
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+  
+      .name {
+        font-size: 14px;
+        color: #333;
+      }
+  
+      .actions {
+        display: flex;
+        gap: 8px;
+      }
+    }
+  }
+  
+  .friend-list,
+  .stranger-list,
+  .request-list {
+    height: 100%;
+    overflow-y: auto;
+  }
 
 #chatcard {
     grid-area: 2 / 3 / 3 / 4;
     background-color: var(--theme_bg_color);
-}
+    flex: 1;
+    display: flex;
+    flex-direction: column;
+    background: #fff;
+    border-left: 1px solid #eee;
+  
+    .chat-header {
+      padding: 16px;
+      border-bottom: 1px solid #eee;
+      
+      .chat-title {
+        color:#000;
+        font-size: 16px;
+        font-weight: 500;
+      }
+    }
+  
+    .chat-messages {
+      flex: 1;
+      padding: 16px;
+      overflow-y: auto;
+      display: flex;
+      flex-direction: column;
+      gap: 16px;
+  
+      .message {
+        max-width: 70%;
+        
+        &__content {
+          padding: 8px 12px;
+          border-radius: 4px;
+          word-break: break-word;
+        }
+  
+        &__time {
+          font-size: 12px;
+          color: #999;
+          margin-top: 4px;
+        }
+  
+        &--self {
+          align-self: flex-end;
+          
+          .message__content {
+            color: #000;
+            background: #95ec69;
+          }
+        }
+  
+        &--other {
+          align-self: flex-start;
+          
+          .message__content {
+            color: #000;
+            background: #eee;
+          }
+        }
+      }
+    }
+  
+    .chat-input {
+      padding: 16px;
+      border-top: 1px solid #eee;
+    }
+  
+    .chat-placeholder {
+      flex: 1;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+    }
+  }
+  
