--- a/src/assets/_mixins.scss
+++ b/src/assets/_mixins.scss
@@ -1,5 +1,3 @@
-// $view-height: 80vh;
-// $view-width: 80vw;
 $header-height: 60px;
 $sider-width: 75px;
 $listheader-height: 75px;
@@ -24,23 +22,11 @@ $chatborder-color: #cdd3dc;
     /* 聊天背景 */
     --theme_bg_color: white;
     /* 顶部栏 */
-    --theme_title_color: rgb(252, 150, 171);
+    --theme_title_color: #3493f9;
     /* 发送栏 */
     --theme_send_bar_color: #eeeeee;
     --view-height: 80vh;
     --view-width: 80vw;
-}
-
-.momotalk {
-    --theme_bg_color: white;
-    --theme_title_color: rgb(252, 150, 171);
-    --theme_send_bar_color: #eeeeee;
-}
-
-.yuzutalk {
-    --theme_bg_color: rgb(255, 247, 225);;
-    --theme_title_color: rgb(255, 220, 66);
-    --theme_send_bar_color: rgb(247, 247, 247);
 }
 
 .not-full-screen {
@@ -55,18 +41,19 @@ $chatborder-color: #cdd3dc;
 
 @mixin font-heavy($size) {
     font-size: $size;
-    font-family: 'Blueaka', 'Blueaka-kr-light', sans-serif;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, 'Helvetica Neue', Arial, 'Noto Sans', sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol';
     font-weight: 1000;
 }
+
 @mixin font-regular($size) {
     font-size: $size;
-    font-family: 'Blueaka', 'Blueaka-kr-light', sans-serif;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, 'Helvetica Neue', Arial, 'Noto Sans', sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol';
     font-weight: 600;
 }
 
 @mixin font-light($size) {
     font-size: $size;
-    font-family: 'Blueaka', 'Blueaka-kr-medium', sans-serif;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, 'Helvetica Neue', Arial, 'Noto Sans', sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol';
     font-weight: 300;
 }
 
@@ -78,7 +65,7 @@ $chatborder-color: #cdd3dc;
 }
 
 @mixin circle($size) {
-    object-fit: cover; // 截取中间正方形
+    object-fit: cover;
     height: $size;
     width: $size;
     border-radius: 50%;
@@ -111,14 +98,4 @@ $chatborder-color: #cdd3dc;
     margin: 0px -5px 0px 10px;
     fill: currentColor;
     color: rgba(0, 0, 0, 0.26);
-}
-
-.vuepress-markdown-body{
-    background-color: var(--theme_bg_color) !important;
-
-    img{
-        width: 100%;
-        border: 2px solid $chatborder-color;
-        border-radius: 20px;
-    }
 }
